<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:layout_marginBottom="@dimen/activity_vertical_margin">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Headline"
			android:textColor="@color/colorPrimary"
			android:text="@string/about_adapter_title"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:text="@string/about_adapter_text"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Headline"
			android:textColor="@color/colorPrimary"
			android:layout_marginTop="16dp"
			android:text="@string/about_layout_title"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="@style/TextAppearance.AppCompat.Body1"
			android:text="@string/about_layout_text"/>

	</LinearLayout>

</ScrollView>
