<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/appbarLayout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:fitsSystemWindows="true"
		app:elevation="0dp"
		android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
			/>

	</android.support.design.widget.AppBarLayout>

	<ScrollView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_weight="1">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:layout_marginLeft="@dimen/activity_horizontal_margin"
			android:layout_marginRight="@dimen/activity_horizontal_margin"
			android:layout_marginTop="@dimen/activity_vertical_margin"
			android:layout_marginBottom="@dimen/activity_vertical_margin">

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Title"
				android:text="@string/about_adapter_title"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:text="@string/about_adapter_text"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Title"
				android:layout_marginTop="16dp"
				android:text="@string/about_layout_title"/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="@style/TextAppearance.AppCompat.Body1"
				android:text="@string/about_layout_text"/>

		</LinearLayout>

	</ScrollView>


</LinearLayout>
