<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	xmlns:tools="http://schemas.android.com/tools"
	android:background="@color/headerBackground"
	android:orientation="vertical"
	android:paddingBottom="0dp"
	android:paddingTop="32dp">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		>

		<TextView
			android:id="@+id/textView"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:layout_weight="1"
			android:paddingEnd="16dp"
			android:paddingStart="16dp"
			android:text="Medium Text"
			android:textAllCaps="true"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:textColor="@color/colorAccent"
			/>

		<TextView
			android:id="@+id/adapterPositionTextView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="start|center_vertical"
			android:padding="16dp"
			tools:text="0"
			android:textAppearance="?android:attr/textAppearanceMedium"
			/>


		<ImageButton
			android:id="@+id/cloneButton"
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/action_clone"
			android:src="@drawable/ic_filter_none_black"
			android:tint="@color/actionButton"/>

		<ImageButton
			android:id="@+id/deleteButton"
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/action_delete"
			android:src="@drawable/ic_clear_black"
			android:tint="@color/actionButton"/>

		<ImageButton
			android:id="@+id/collapseButton"
			style="?android:attr/borderlessButtonStyle"
			android:layout_width="48dp"
			android:layout_height="48dp"
			android:layout_gravity="center_vertical"
			android:contentDescription="@string/action_collapse"
			android:src="@drawable/ic_expand_less_black_24dp"
			android:tint="@color/actionButton"/>


	</LinearLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/divider"/>

</LinearLayout>
